Fix:  Socket Setter 수정 및 MessageItem 컴포넌트로 Inquiry 컴포넌트 Wrapping

--- a/src/components/inquiry/inquiry-item/index.scss
+++ b/src/components/inquiry/inquiry-item/index.scss
@@ -3,7 +3,6 @@
 .inquiryItem {
   display: flex;
   align-items: flex-start;
-  width: 100%;
   padding: 20px 0;
 
   &-profileImageWrapper {
